--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -40,18 +40,7 @@ window#waybar {
     background-color: #303030;
 }
 
-#window {
-	padding: 0 20pt 0 20pt;
-}
-
-#custom-slstatus {
-	padding: 0 5pt 0 0;
-}
-
-#tray {
-	padding: 0 2pt 0 0;
-}
-
+/* left */
 #tags button {
 	color: #d0d0d0;
 	background-color: #303030;
@@ -70,5 +59,18 @@ window#waybar {
 #tags button.urgent {
     color: #303030;
     background-color: #d0d0d0;
+}
+
+#window {
+	padding: 0 32pt 0 0;
+}
+
+/* right */
+#custom-slstatus {
+	padding: 0 4pt 0 0;
+}
+
+#tray {
+	padding: 0 4pt 0 0;
 }
 
