--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -54,8 +54,14 @@ window#waybar {
 }
 
 #tags button:hover {
-	/* cannot change background from white; accept it and move on */
-	color: #303030;
+	color: #f5f5f5;
+	background-color: #505050;
+	box-shadow: 0 1px rgba(255, 255, 255, 0) inset;
+	background-image: none;
+	text-shadow: none;
+	transition-timing-function: ease;
+	-gtk-icon-effect: none;
+	-gtk-icon-shadow: none;
 }
 
 #tags button.occupied {
