--- a/config/waybar/style.template.css
+++ b/config/waybar/style.template.css
@@ -34,6 +34,11 @@ brown
 	border-radius: 0;
 	transition-property: none;
 	transition-duration: 0;
+	box-shadow: none;
+	background-image: none;
+	text-shadow: none;
+	-gtk-icon-effect: none;
+	-gtk-icon-shadow: none;
 }
 
 window#waybar {
@@ -56,12 +61,6 @@ window#waybar {
 #tags button:hover {
 	color: #f5f5f5;
 	background-color: #505050;
-	box-shadow: 0 1px rgba(255, 255, 255, 0) inset;
-	background-image: none;
-	text-shadow: none;
-	transition-timing-function: ease;
-	-gtk-icon-effect: none;
-	-gtk-icon-shadow: none;
 }
 
 #tags button.occupied {
@@ -92,7 +91,6 @@ window#waybar {
 /* right */
 #custom-slstatus {
 	color: #d0d0d0;
-	background-color: #303030;
 	margin-right: 6pt;
 }
 
