--- a/config/waybar/style.template.css
+++ b/config/waybar/style.template.css
@@ -88,6 +88,17 @@ window#waybar {
 	background-color: #505050;
 }
 
+#layout {
+	color: #f5f5f5;
+	padding-left: 6pt;
+	padding-right: 6pt;
+	margin-right: 11pt;
+}
+
+#layout.focused {
+	background-color: #505050;
+}
+
 /* right */
 #custom-slstatus {
 	color: #d0d0d0;
