--- a/config/waybar/style.template.css
+++ b/config/waybar/style.template.css
@@ -72,7 +72,18 @@ window#waybar {
 	background-color: #d0d0d0;
 }
 
+#layout {
+	color: #f5f5f5;
+	background-color: #505050;
+	margin-left: 16pt;
+}
+
 #window.focused {
 	color: #f5f5f5;
 	background-color: #505050;
+	margin-left: 16pt;
+}
+
+#custom-slstatus {
+	margin-left: 16pt;
 }
