--- a/config/vimium/vimium-dark-theme.css
+++ b/config/vimium/vimium-dark-theme.css
@@ -1,9 +1,11 @@
 /* https://github.com/zfhg/vimium-dark-theme */
 
 :root {
-    --font-size: 14;
-    --font-size-hints: 12;
-    --font-size-url: 12;
+    --font-size: 11pt;
+    --font-size-hints: 11pt;
+    --font-size-url: 10pt;
+    --font-size-help: 10pt;
+    --font-size-search: 12pt;
 
     --font-weight: normal;
     --font-weight-medium: medium;
@@ -132,7 +134,7 @@
 #vomnibar li .vomnibarSource {
     color: var(--fg-dark);
     font-family: var(--font);
-    font-size: 12;
+    font-size: var(--font-size-url);
     font-weight: var(--font-weight-bold);
     text-transform: uppercase; /* `.vomnibarSource` will be in all uppercase letters. Delete to revert to original */
 }
@@ -187,7 +189,7 @@ div.vimiumHUD span#hud-find-input,
 div.vimiumHUD .vimiumHUDSearchAreaInner {
     color: var(--fg);
     font-family: var(--font);
-    font-size: 13;
+    font-size: var(--font-size-search);
     font-weight: var(--font-weight-medium);
 }
 
@@ -236,9 +238,15 @@ span.vimiumHelpDialogKey {
   text-shadow: none;
 }
 
-td.vimiumHelpSectionTitle, td.vimiumHelpDescription {
+div#vimiumHelpDialog td.vimiumHelpDescription {
+  font-family: var(--font);
+  font-size: var(--font-size-help);
+}
+
+div#vimiumHelpDialog td.vimiumHelpSectionTitle {
   color: var(--fg);
   font-family: var(--font);
+  font-size: var(--font-size);
 }
 
 div.vimiumColumn {
