vimium: monospace only for hints and search, less intrusive font sizing

--- a/config/vimium/vimium-dark-theme.css
+++ b/config/vimium/vimium-dark-theme.css
@@ -1,15 +1,18 @@
 /* https://github.com/zfhg/vimium-dark-theme */
 
 :root {
-    --font-size: 14;
-    --font-size-hints: 12;
-    --font-size-url: 12;
+    --font-size: 11pt; /* 14px */
+    --font-size-hints: 10pt; /* 12px */
+    --font-size-url: 10pt; /* 12px */
+    --font-size-search: 13pt; /* 13px */
 
     --font-weight: normal;
     --font-weight-medium: medium;
     --font-weight-bold: bold;
 
-    --font: "Monospace", monospace; /* Font used in the UI */
+    --font: sans-serif; /* Font used in the UI */
+    --font-hints: monospace;
+    --font-search: monospace;
   
     --padding: 2px;
     --padding-vomnibar: 6px;
@@ -47,7 +50,7 @@
 
 #vimiumHintMarkerContainer div span {
     color: var(--fg-hints);
-    font-family: var(--font);
+    font-family: var(--font-hints);
     font-size: var(--font-size-hints);
     font-weight: var(--font-weight-bold);
     text-shadow: none;
@@ -132,9 +135,9 @@
 #vomnibar li .vomnibarSource {
     color: var(--fg-dark);
     font-family: var(--font);
-    font-size: 12;
+    font-size: var(--font-size);
     font-weight: var(--font-weight-bold);
-    text-transform: uppercase; /* `.vomnibarSource` will be in all uppercase letters. Delete to revert to original */
+    /* text-transform: uppercase; /1* `.vomnibarSource` will be in all uppercase letters. Delete to revert to original *1/ */
 }
 
 #vomnibar li em,
@@ -186,8 +189,8 @@ div.vimiumHUD {
 div.vimiumHUD span#hud-find-input,
 div.vimiumHUD .vimiumHUDSearchAreaInner {
     color: var(--fg);
-    font-family: var(--font);
-    font-size: 13;
+    font-family: var(--font-search);
+    font-size: var(--font-size-search);
     font-weight: var(--font-weight-medium);
 }
 
@@ -230,7 +233,7 @@ span.vimiumHelpDialogKey {
   box-shadow: var(--shadow);
   padding: 2px 3px;
   color: var(--fg-hints);
-  font-family: var(--font);
+  font-family: var(--font-hints);
   font-size: var(--font-size-hints);
   font-weight: var(--font-weight-bold);
   text-shadow: none;
