--- a/config/vimium/vimium-dark-theme.css
+++ b/config/vimium/vimium-dark-theme.css
@@ -1,9 +1,9 @@
 :root {
     --font-size: 16px;
-    --font-size-hints: 14px;
+    --font-size-hints: 16px;
     --font-size-url: 14px;
-    --font-size-search: 18px;
-    --font-size-source: 12px;
+    --font-size-hud: 14px;
+    --font-size-source: 11px;
 
     --font-weight: normal;
     --font-weight-medium: medium;
@@ -11,7 +11,9 @@
 
     --font: sans-serif; /* Font used in the UI */
     --font-hints: monospace;
+    --font-url: monospace;
     --font-search: monospace;
+	--font-hud: monospace;
   
     --padding: 2px;
     --padding-vomnibar: 6px;
@@ -20,17 +22,19 @@
 /* -------- VOMNIBAR & HUD -------- */
     --fg: #$BASE16[default_foreground];
     --fg-dark: #$BASE16[comments];
-    --fg-url: #$BASE16[bright_blue];
-    --fg-match: #$BASE16[yellow];
-    --fg-source: #$BASE16[comments];
-    /* ALTERNATIVE `--fg-match' COLOR: 
-    --fg-match: #F29A4A; */
+    --fg-url: #$BASE16[blue];
+	--fg-title: #$BASE16[magenta];
+    --fg-match: #$BASE16[orange];
+    --fg-source: #$BASE16[brown];
+    --fg-hud: #$BASE16[default_background];
 
     --bg: #$BASE16[default_background];
     --bg-searcharea: #$BASE16[lighter_background];
     --bg-selected: #$BASE16[selection_background];
+    --bg-hud: #$BASE16[yellow];
 
     --border: #$BASE16[default_foreground];
+	--border-hud: #$BASE16[default_background];
 
 /* -------- HINTS -------- */
     --bg-hints: #$BASE16[bright_yellow];      /* Background color of link hints */
@@ -45,7 +49,7 @@
     background: var(--bg-hints);
     border: 1px solid var(--border-hints);
     box-shadow: var(--shadow);
-    padding: 0px 1px;
+    padding: 0px 2px;
 }
 
 #vimiumHintMarkerContainer div span {
@@ -57,11 +61,11 @@
 }
 
 #vimiumHintMarkerContainer div > .matchingCharacter {
-    opacity: 0.3;
+    opacity: 0;
 }
 
 #vimiumHintMarkerContainer div > .matchingCharacter ~ span {
-    color: var(--hints-main-fg);
+    color: var(--fg-hints);
 }
 
 /* -------- VOMNIBAR -------- */
@@ -93,7 +97,7 @@
     border: none;
     box-shadow: none;
     color: var(--fg);
-    font-family: var(--font);
+    font-family: var(--font-search);
     font-size: var(--font-size);
     font-weight: var(--font-weight);
 }
@@ -133,7 +137,7 @@
 }
 
 #vomnibar li .vomnibarSource {
-    color: var(--fg-dark);
+    color: var(--fg-source);
     font-family: var(--font);
     font-size: var(--font-size-source);
     font-weight: var(--font-weight-bold);
@@ -142,7 +146,7 @@
 
 #vomnibar li em,
 #vomnibar li .vomnibarTitle {
-    color: var(--fg);
+    color: var(--fg-title);
     font-family: var(--font);
     font-size: var(--font-size);
     font-weight: var(--font-weight-medium);
@@ -150,14 +154,14 @@
 
 #vomnibar li .vomnibarUrl {
     color: var(--fg-url);
-    font-family: var(--font);
+    font-family: var(--font-url);
     font-size: var(--font-size-url);
     font-weight: var(--font-weight-medium);
 }
 
 #vomnibar li .vomnibarMatch {
     color: var(--fg-match);
-    font-weight: normal;
+    font-weight: bold;
 }
 
 #vomnibar li .vomnibarTitle .vomnibarMatch {
@@ -180,17 +184,17 @@
 
 /* -------- HUD -------- */
 div.vimiumHUD {
-    background: var(--bg);
-    border: 1px solid var(--border);
+    background: var(--bg-hud);
+    border: 1px solid var(--border-hud);
     box-shadow: var(--shadow);
     border-radius: 6px;
 }
 
 div.vimiumHUD span#hud-find-input,
 div.vimiumHUD .vimiumHUDSearchAreaInner {
-    color: var(--fg);
-    font-family: var(--font-search);
-    font-size: var(--font-size-search);
+    color: var(--fg-hud);
+    font-family: var(--font-hud);
+    font-size: var(--font-size-hud);
     font-weight: var(--font-weight-medium);
 }
 
@@ -201,14 +205,18 @@ div.vimiumHUD .hud-find {
 
 div.vimiumHUD .vimiumHUDSearchArea {
     background-color: transparent;
-    padding: 6px;
+    padding: 1px;
+}
+
+div.vimiumHUD span#hud-match-count {
+	color: #$BASE16[selection_background];
 }
 
 /* -------- HELP DIALOG -------- */
 div#vimiumHelpDialog {
   border: 1px solid var(--border);
   border-radius: 5px;
-  background: var(--bg-searcharea);
+  background: var(--bg);
   font-family: var(--font);
   font-size: var(--font-size);
 }
