explicit FONT_SIZE_PT_BAR

--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -1,6 +1,6 @@
 * {
 	font-family: Monospace;
-	font-size: $FONT_SIZE_PT_EVENpt;
+	font-size: $FONT_SIZE_PT_BARpt;
 	min-height: 0pt;
 	padding: 0 0 0 0;
 	border: none;
